browser: a11y: fix dialog size at 400% zoom
When zooming to 400%, the dialog size should remain fixed.
Otherwise, the horizontal scrollbar will not be visible.

Reviewed-on: https://gerrit.collaboraoffice.com/c/online/+/1734
Tested-by: Jenkins CPCI <releng@collaboraoffice.com>
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Reviewed-on: https://gerrit.collaboraoffice.com/c/online/+/3215

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -42,6 +42,14 @@
 	min-width: 400px;
 }
 
+@media (max-width: 480px) {
+
+	.jsdialog-window:not(.modalpopup) .jsdialog-container:not(.snackbar) {
+		min-width: unset;
+		width: 460px;
+	}
+}
+
 .jsdialog-container:not(.snackbar) td[role='gridcell'] {
 	padding-left: 5px;
 	padding-right: 5px;
@@ -193,6 +201,14 @@ div#autoFillPreviewTooltip .lokdialog.ui-dialog-content.ui-widget-content {
 	overflow: hidden; /* don't inherit scrollbar from parent */
 }
 
+@media (max-width: 480px) {
+
+	.jsdialog-container .ui-dialog-content > div:not(.ui-scrollwindow) {
+		overflow: unset;
+	}
+}
+
+
 .jsdialog-container .lokdialog.ui-dialog-content.ui-widget-content {
 	overflow: hidden;
 }
@@ -204,6 +220,15 @@ div#autoFillPreviewTooltip .lokdialog.ui-dialog-content.ui-widget-content {
 	line-height: var(--default-height);
 	padding-left: inherit;
 }
+
+@media (max-width: 480px) {
+
+	.jsdialog-container .lokdialog.ui-dialog-content.ui-widget-content {
+		overflow-x: unset;
+	}
+}
+
+
 #glowframe > div.ui-frame.jsdialog.sidebar > label,
 #softedgeframe > div.ui-frame.jsdialog.sidebar > label {
 	color: var(--color-main-text);
